--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,28 @@ authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
 version = "0.1.0"
 
 [deps]
+DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+DynamicBoundsBase = "890bb398-7f8e-4565-ac8e-279ab2833f68"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
-julia = "~0.7, ~1.0, ~1.1, ~1.2, ~1.3"
+DiffResults = "~1.0"
+DocStringExtensions = "~0.8"
+DynamicBoundsBase = "~0.1"
+ForwardDiff = "~0.10"
+IntervalArithmetic = "~0.16"
+McCormick = "~0.1"
+Reexport = "~0.2"
+StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
+TaylorSeries = "0.10"
+julia = "~1.1, ~1.2, ~1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
