--- a/Project.toml
+++ b/Project.toml
@@ -25,11 +25,11 @@ DynamicBoundsBase = "~0.1"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16"
-McCormick = "~0.4"
+McCormick = "0.4.3"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 TaylorSeries = "0.11"
-julia = "~1.1, ~1.2, ~1.3"
+julia = "~1.1, ~1.2, ~1.3, ~1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
