--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
@@ -26,6 +27,7 @@ ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16"
 McCormick = "0.6.0"
+Polynomials = "~1.1"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 TaylorSeries = "0.11"
