--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+STaylor = "31d77acf-7459-4259-8f60-87133e716285"
 
 [compat]
 DataStructures = "0.17.11"
@@ -26,11 +26,11 @@ DynamicBoundsBase = "~0.3"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16"
-McCormick = "0.6.0"
+McCormick = "~0.7"
 Polynomials = "~1.1"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-TaylorSeries = "0.11"
+STaylor = "~0.1"
 julia = "~1.1, ~1.2, ~1.3, ~1.4"
 
 [extras]
