--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-STaylor = "31d77acf-7459-4259-8f60-87133e716285"
+StaticTaylorSeries = "91725f60-9ab6-11e9-00d0-87fe6d51fd3a"
 
 [compat]
 DataStructures = "0.17.11"
@@ -30,8 +30,8 @@ McCormick = "~0.7"
 Polynomials = "~1.1"
 Reexport = "~0.2"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-STaylor = "~0.1"
-julia = "~1.1, ~1.2, ~1.3, ~1.4"
+StaticTaylorSeries = "~0.1"
+julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
