--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: julia
 
 os:
   - linux
-  - osx
-  - windows
+#  - osx
+#  - windows
 
 julia:
   - 1.2
-  - 1.3
-  - 1.4
+#  - 1.3
+#  - 1.4
   - 1.5
   - nightly
 
