--- a/Project.toml
+++ b/Project.toml
@@ -15,8 +15,9 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
-StaticTaylorSeries = "91725f60-9ab6-11e9-00d0-87fe6d51fd3a"
+TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
 DataStructures = "0.17.11"
@@ -29,8 +30,9 @@ IntervalArithmetic = "~0.16"
 McCormick = "~0.7"
 Polynomials = "~1.1"
 Reexport = "~0.2"
+Requires = "~1.0"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
-StaticTaylorSeries = "~0.1"
+TaylorSeries = "~0.10"
 julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
