--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ DynamicBoundsBase = "~0.3"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16"
-McCormick = "~0.7"
+McCormick = "~0.7, ~0.8"
 Polynomials = "~1.1"
 Reexport = "~0.2"
 Requires = "~1.0"
