Add unit tests and fix access functions

--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 DataStructures = "0.17.11"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "~0.3"
+DynamicBoundsBase = "0.3.2"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16"
