Add 0.17 interval arithmetic dependency

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.3.2"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
-IntervalArithmetic = "~0.16"
+IntervalArithmetic = "~0.16, ~0.17"
 McCormick = "~0.7, ~0.8"
 Polynomials = "~1.1"
 Reexport = "~0.2"
