--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
+DiffEqSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DynamicBoundsBase = "890bb398-7f8e-4565-ac8e-279ab2833f68"
@@ -17,10 +19,13 @@ Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
 DataStructures = "0.17.11"
+DiffEqBase = "6.12.2"
+DiffEqSensitivity = "~6"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.3.2"
@@ -32,6 +37,7 @@ Polynomials = "~1.1"
 Reexport = "~0.2"
 Requires = "~1.0"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
+Sundials = "3.8.3"
 TaylorSeries = "~0.10"
 julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
