--- a/Project.toml
+++ b/Project.toml
@@ -28,11 +28,11 @@ DiffEqBase = "6.12.2"
 DiffEqSensitivity = "~6"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "0.3.2"
+DynamicBoundsBase = "~0.4"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16, ~0.17"
-McCormick = "~0.7, ~0.8"
+McCormick = "~0.7, ~0.8, ~0.9"
 Polynomials = "~1.1"
 Reexport = "~0.2"
 Requires = "~1.0"
