--- a/Project.toml
+++ b/Project.toml
@@ -32,14 +32,14 @@ DynamicBoundsBase = "~0.4"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 IntervalArithmetic = "~0.16, ~0.17"
-McCormick = "~0.7, ~0.8, ~0.9"
+McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
 Polynomials = "~1.1"
 Reexport = "~0.2"
 Requires = "~1.0"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 Sundials = "3.8.3"
 TaylorSeries = "~0.10"
-julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
+julia = "~1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
