--- a/Project.toml
+++ b/Project.toml
@@ -28,10 +28,10 @@ DiffEqBase = "6.12.2"
 DiffEqSensitivity = "~6"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "~0.4"
+DynamicBoundsBase = "~0.5"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
-IntervalArithmetic = "~0.16, ~0.17"
+IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
 McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
 Polynomials = "~1.1"
 Reexport = "~0.2"
