--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
 DataStructures = "0.17.11"
-DiffEqBase = "6.12.2"
+DiffEqBase = "6.5 - 6.57"
 DiffEqSensitivity = "~5, ~6"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
