--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ Requires = "~1.0"
 StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
 Sundials = "~3, ~4"
 TaylorSeries = "~0.10"
-julia = "~1"
+julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
