--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
 Polynomials = "~1.2"
 Reexport = "~0.2"
 Requires = "~1.0"
-StaticArrays = "~0.8, ~0.9, ~0.10, ~0.11, ~0.12"
+StaticArrays = "~0.6, ~0.7, ~0.8, ~0.9, ~0.10, ~0.11, ~0.12, ~1"
 Sundials = "~3, ~4"
 TaylorSeries = "~0.10"
 julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
