--- a/Project.toml
+++ b/Project.toml
@@ -17,13 +17,29 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
-TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+
+[compat]
+DataStructures = "0.17.11"
+DiffEqBase = "~1, ~2, ~3, ~4, ~5, ~6"
+DiffEqSensitivity = "~1,~2, ~3, ~4, ~5, ~6"
+DiffResults = "~1.0"
+DocStringExtensions = "~0.8"
+DynamicBoundsBase = "~0.5"
+ElasticArrays = "~1"
+ForwardDiff = "~0.10"
+IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
+McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
+Polynomials = "~1.2"
+Reexport = "~0.2"
+StaticArrays = "~0.6, ~0.7, ~0.8, ~0.9, ~0.10, ~0.11, ~0.12, ~1"
+Sundials = "~3, ~4"
+julia = "~1.1, ~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [targets]
-test = ["Test"]
+test = ["Test", "TaylorSeries"]
