--- a/Project.toml
+++ b/Project.toml
@@ -22,14 +22,13 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 
 [compat]
 DataStructures = "0.17.11"
-DiffEqBase = "~1, ~2, ~3, ~4, ~5, ~6"
-DiffEqSensitivity = "~1,~2, ~3, ~4, ~5, ~6"
-DiffResults = "~1.0"
+DiffEqBase = "~5, ~6"
+DiffEqSensitivity = "~5, ~6"
+DiffResults = "~0.0, ~1.0"
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "~0.5"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
-IntervalArithmetic = "~0.14, ~0.15, ~0.16, ~0.17"
 McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
 Polynomials = "~1.2"
 Reexport = "~0.2"
