--- a/Project.toml
+++ b/Project.toml
@@ -39,8 +39,8 @@ Sundials = "~3, ~4"
 julia = "~1.2, ~1.3, ~1.4, ~1.5"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "TaylorSeries"]
+test = ["TaylorSeries", "Test"]
