--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ DiffEqBase = "~5, ~6"
 DiffEqSensitivity = "~5, ~6"
 DiffResults = "~0.0, ~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "~0.5"
+DynamicBoundsBase = "0.5.3"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
