--- a/Project.toml
+++ b/Project.toml
@@ -22,15 +22,15 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 
 [compat]
-DataStructures = "0.17.11"
+DataStructures = "~0.17, ~0.18"
 DiffEqBase = "~5, ~6"
-DiffEqSensitivity = "~5, ~6"
+DiffEqSensitivity = "~6"
 DiffResults = "~0.0, ~1.0"
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.5.3"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
-McCormick = "~0.7, ~0.8, ~0.9, ~0.10"
+McCormick = "~0.7, ~0.8, ~0.9, ~0.10, ~0.11"
 Polynomials = "~1.2"
 Requires = "1.0"
 Reexport = "~0.2"
