--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ DiffEqBase = "~5, ~6"
 DiffEqSensitivity = "~6"
 DiffResults = "~0.0, ~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "0.5.3"
+DynamicBoundsBase = "0.5.4"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
 McCormick = "~0.7, ~0.8, ~0.9, ~0.10, ~0.11"
@@ -36,7 +36,7 @@ Requires = "1.0"
 Reexport = "~0.2"
 StaticArrays = "~0.6, ~0.7, ~0.8, ~0.9, ~0.10, ~0.11, ~0.12, ~1"
 Sundials = "~3, ~4"
-julia = "~1.2, ~1.3, ~1.4, ~1.5, ~1.6"
+julia = "~1.6"
 
 [extras]
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
