--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
           - version: '1.6'
             os: windows-latest
             arch: x64
+          - version: '1.7'
+            os: ubuntu-latest
+            arch: x64
+          - version: '1.7'
+            os: windows-latest
+            arch: x64
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
