--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "DynamicBoundspODEsDiscrete"
 uuid = "1c7daff2-9b32-4762-838b-ee2b1e32ee26"
 authors = ["Matthew Wilhelm <matthew.wilhelm@uconn.edu>"]
-version = "0.1.0"
+version = "0.2"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -26,16 +26,16 @@ DiffEqBase = "~5, ~6"
 DiffEqSensitivity = "~6"
 DiffResults = "~0.0, ~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "0.5.5"
+DynamicBoundsBase = "0.6"
 ElasticArrays = "~1"
 ForwardDiff = "~0.10"
-McCormick = "~0.7, ~0.8, ~0.9, ~0.10, ~0.11"
+McCormick = "~0.12"
 Polynomials = "~1.2"
 Requires = "1.0"
 Reexport = "~0.2"
 StaticArrays = "~0.6, ~0.7, ~0.8, ~0.9, ~0.10, ~0.11, ~0.12, ~1"
 Sundials = "~3, ~4"
-julia = "~1.6"
+julia = "~1.6, ~1.7"
 
 [extras]
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
