Start Wilhelm2019 Update

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ ElasticArrays = "fdbdab4c-e67f-52f5-8c3f-e7b388dad3d4"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 McCormick = "53c679d3-6890-5091-8386-c291e8c8aaa1"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
@@ -24,16 +25,17 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 DataStructures = "~0.17, ~0.18"
 DiffEqBase = "~5, ~6"
 DiffEqSensitivity = "~6"
-DiffResults = "~0.0, ~1.0"
+DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
 DynamicBoundsBase = "0.6"
 ElasticArrays = "~1"
-ForwardDiff = "~0.10"
-McCormick = "~0.12"
+ForwardDiff = "0.10.25"
+McCormick = "~0.13"
+OrdinaryDiffEq = "~6"
 Polynomials = "~1.2"
 Requires = "1.0"
-Reexport = "~0.2"
-StaticArrays = "~0.6, ~0.7, ~0.8, ~0.9, ~0.10, ~0.11, ~0.12, ~1"
+Reexport = "~1"
+StaticArrays = "~1"
 Sundials = "~3, ~4"
 julia = "~1.6, ~1.7"
 
