--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 DataStructures = "~0.17, ~0.18"
@@ -27,16 +28,17 @@ DiffEqBase = "~5, ~6"
 DiffEqSensitivity = "~6"
 DiffResults = "~1.0"
 DocStringExtensions = "~0.8"
-DynamicBoundsBase = "0.7"
+DynamicBoundsBase = "0.7.1"
 ElasticArrays = "~1"
 ForwardDiff = "0.10.25"
-McCormick = "~0.13"
+McCormick = "0.13.2"
 OrdinaryDiffEq = "~6"
 Polynomials = "~1.2"
 Requires = "1.0"
 Reexport = "~1"
 StaticArrays = "~1"
 Sundials = "~3, ~4"
+UnPack = "~1"
 julia = "~1.6, ~1.7"
 
 [extras]
