--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ Reexport = "~1"
 StaticArrays = "~1"
 Sundials = "~3, ~4"
 UnPack = "~1"
-julia = "~1.6, ~1.7"
+julia = "~1.6, ~1.7, ~1.8"
 
 [extras]
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
